--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB1h9hWy9bN2P_o1lhUv5x0-K8zK1Yrcu0"/>
         <activity
             android:name=".Packages.Home.HomeMainActivity"
             android:exported="false" />
